bug fixing e allinamento commenti
ho cambiato delle cose depracated per la nostra ver di java tipo URL per la chiamata API al generatore di frasi random, commenti modificati in accordo con Marco